--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -9,7 +9,7 @@
   align-items: center;
 }
 .logo {
-  width: 150px;
+  width: 12vw;
 }
 .navbar_elements a {
   text-decoration: none;
@@ -41,4 +41,19 @@ a:hover
     border: 2px solid darkorange;
     cursor: pointer;
     transition: all 0.2s;
+}
+
+@media (max-width:500px) {
+  .navbar_elements a
+  {
+    font-size: 2.5vw;
+  }
+  .navbar_button
+  {
+    font-size: 2vw;
+  }
+  .logo
+  {
+    width: 22vw;
+  }
 }
