--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -88,7 +88,7 @@
   color: wheat;
   font-size: medium;
   font-weight: 600;
-  font-family: 'Ubuntu';
+  font-family: "Ubuntu", sans-serif;
   border: 2px solid crimson;
 }
 .about_me:hover
@@ -176,7 +176,7 @@
   .photo
   {
     width: 47vw;
-    top: 57vh;
+    top: 70vh;
     left: 28vw;
   }
   .about_me
@@ -189,16 +189,33 @@
   }
 }
 @media (max-width:400px) {
-    .photo
-    {
-        top: 49vh
-    }
     .svg
     {
       padding-right: 10px;
     }
     .about_me
     {
-      font-size: 2.2vw;
+      font-size: 3.2vw;
+      padding: 1.5vh 7vw;
+    }
+    .home_p1 {
+      font-size: 6vw;
+    }
+    .home_p2 {
+      font-size: 6vw;
+    }
+    .home_p3
+    {
+      font-size: 5vw;
+    }
+    .home_p4
+    {
+      font-size: 3.4vw;
+    }
+    .photo
+    {
+      width: 63vw;
+      top: 60vh;
+      left: 20vw;
     }
 }
