--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -1,45 +1,61 @@
-.projct
-{
-    border: 2px solid;
-    height: 400px;
+.projct {
+  height: 400px;
 }
-.projct_h3
-{
-    text-align: center;
-    font-size: xxx-large;
-    font-family: "Ubuntu", sans-serif;
+.projct_h3 {
+  text-align: center;
+  font-size: xxx-large;
+  font-family: "Ubuntu", sans-serif;
 }
-.projct_flex
-{
-    display: flex;
-    justify-content: space-evenly;
-    border: 3px solid yellow;
-    height: 300px;
-    align-items: center;
-    flex-wrap: wrap;
-    /* margin-left: 100px; */
+.projct_flex {
+  display: flex;
+  justify-content: space-evenly;
+  height: 300px;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
 }
-.projct_card
-{
-    border: 2px solid red;
-    width: 285px;
-    margin: 5px 5px;
-    height: 200px;
-    cursor: pointer;
+.projct_card {
+  border: 2px solid red;
+  width: 285px;
+  margin: 5px 5px;
+  height: 200px;
+  cursor: pointer;
+  box-shadow: 0px 0px 10px 2px purple;
+  width: 318px;
+  height: 146px;
 }
-.projct_1
-{
-    
+#projct_1 {
+  background-image: url(../../images/music.png);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
-.projct_2
-{
-
+#projct_2 {
+  background-image: url(../../images/quotes.png);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
-.projct_3
-{
-
+#projct_3 {
+  background-image: url(../../images/movie.png);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
-.projct_4
-{
-
+#music_plyr_p {
+  text-align: center;
+  font-size: large;
+  color: darkgrey;
+  font-family: "Ubuntu", sans-serif;
+}
+.projects_a {
+  text-decoration: none;
+}
+@media (max-width: 425px) {
+  .projct_h3 {
+    font-size: x-large;
+  }
+  .projct_flex {
+    height: 600px;
+  }
+  .projct {
+    margin-top: 100px;
+  }
 }
