--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -23,6 +23,7 @@
   box-shadow: 0px 0px 10px 2px purple;
   width: 318px;
   height: 146px;
+  border-radius: 10px;
 }
 #projct_1 {
   background-image: url(../../images/music.png);
