--- a/src/Components/footer/Footer.css
+++ b/src/Components/footer/Footer.css
@@ -137,8 +137,7 @@ footer {
   .conct_div2 {
     background-color: rgb(97, 85, 85);
   }
-  .conct_btn
-  {
+  .conct_btn {
     margin-bottom: 10px;
   }
 }
