--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -104,7 +104,7 @@
 @media (max-width: 550px) {
   .scrolltotop
   {
-    display: none;
+    visibility: hidden;
   }
   .container {
     top: 14vh;
